# SC4002-Project

./: .gitignore  .pre-commit-config.yaml  README.md  _config.yml  pyproject.toml
.github/workflows/: lint.yml  unittest.yml
demo/: word_stat.ipynb
report/src/: SC4002.tex
report/src/references/: ref.bib
report/src/sections/: appendix.tex  enhancement.tex  intro.tex  prep.tex  rnn.tex
report/src/title/: logo.pptx  titlepage.tex
scripts/: run.ipynb  sweep_config.json  train.sh  train_bigru_sweep_not_freeze.sh  train_bilstm_not_freeze.sh  train_bilstm_sweep_not_freeze.sh  train_enhancement.sh  train_rnn_freeze.sh  train_rnn_not_freeze.sh  train_rnn_not_freeze_mean.sh  train_rnn_sweep_freeze.sh  train_rnn_sweep_not_freeze.sh  train_sweep.sh
scripts/config/: sweep_config.json  sweep_config_bigru.json  sweep_config_cnn.json  sweep_config_rnn.json
src/sc4002/: __main__.py
src/sc4002/eval/: __init__.py  accuracy_precision_recall_F1 score.py  metrics.py
src/sc4002/models/: __init__.py  base_model.py  bigru.py  bilstm.py  cnn.py  glove.py  rnn.py  tokenizer.py
src/sc4002/train/: config.py  train.py  train_sweep.py  trainer.py  utils.py
src/sc4002/utils/: word_stat.py  word_stats.py
test/: test_glove.py  test_rnn.py  utils.py
tools/: prepare_glove.py
