[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[tomli]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sc4002"
version = "0.1.0"
authors = [
    { name = "Kaichen Zhang", email = "zhan0564@e.ntu.edu.sg" },
    { name = "Fanyi Pu", email = "FPU001@e.ntu.edu.sg" },
    { name = "Ruixiao Zeng", email = "zeng0146@e.ntu.edu.sg" },
    { name = "Yi Shan", email = "sh0005yi@e.ntu.edu.sg" },
    { name = "Yutong Tang", email = "tang0513@e.ntu.edu.sg" },
    { name = "Jiahua Zhang", email = "jzhang132@e.ntu.edu.sg" },
]
description = "SC4002 Project"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pandas==2.2.3",
    "datasets==3.0.1",
    "sentence-transformers",
    "torch",
    "safetensors",
    "tqdm",
    "hf_transfer",
    "loguru",
    "transformers==4.45.2",
    "accelerate",
    "evaluate"
]

[project.optional-dependencies]
opt = [
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = [
    "test"
]

[tool.wheel]
exclude = [
    "test"
]

[project.scripts]
run = "sc4002.__main__:main"

[project.urls]
Homepage = "https://pufanyi.github.io/SC4002-Project/"
Repository = "https://github.com/pufanyi/SC4002-Project"
